refactor(makefile): possibilita rodar o projeto com argumentos

--- a/etapa02/makefile
+++ b/etapa02/makefile
@@ -16,6 +16,9 @@ package:
 run:
 	cd $(PROJECT_NAME) && $(MAVEN) exec:java -Dexec.mainClass="ufpa.labsd.zookeeper.$(word 2, $(MAKECMDGOALS))"
 
+run-with-args:
+	cd $(PROJECT_NAME) && $(MAVEN) exec:java -Dexec.mainClass="ufpa.labsd.zookeeper.$(word 2, $(MAKECMDGOALS))" -Dexec.args="$(word 3, $(MAKECMDGOALS))"
+
 all:
 	clean compile
 
