--- a/etapa02/makefile
+++ b/etapa02/makefile
@@ -14,10 +14,10 @@ package:
 	cd $(PROJECT_NAME) && $(MAVEN) package
 
 run:
-	cd $(PROJECT_NAME) && $(MAVEN) exec:java -Dexec.mainClass="ufpa.labsd.zookeeper.$(word 2, $(MAKECMDGOALS))"
+	cd $(PROJECT_NAME) && $(MAVEN) exec:java -Dexec.mainClass="$(word 2, $(MAKECMDGOALS))"
 
 run-with-args:
-	cd $(PROJECT_NAME) && $(MAVEN) exec:java -Dexec.mainClass="ufpa.labsd.zookeeper.$(word 2, $(MAKECMDGOALS))" -Dexec.args="$(word 3, $(MAKECMDGOALS))"
+	cd $(PROJECT_NAME) && $(MAVEN) exec:java -Dexec.mainClass="$(word 2, $(MAKECMDGOALS))" -Dexec.args="$(word 3, $(MAKECMDGOALS))"
 
 all:
 	clean compile
