build(makefile/readme): corrige atalhos para rodar o projeto

--- a/etapa03/makefile
+++ b/etapa03/makefile
@@ -6,11 +6,20 @@ compile:
 clean:
 	$(MAVEN) clean
 
-run-bug:
-	$(MAVEN) exec:java -Dexec.mainClass="ufpa.labsd.zookeeper.Corrida"
+test:
+	$(MAVEN) test
+
+package:
+	$(MAVEN) package
 
 run:
-	$(MAVEN) exec:java -Dexec.mainClass="ufpa.labsd.zookeeper.sembug.Corrida"
+	$(MAVEN) exec:java -Dexec.mainClass="$(word 2, $(MAKECMDGOALS))"
+
+run-with-args:
+	$(MAVEN) exec:java -Dexec.mainClass="$(word 2, $(MAKECMDGOALS))" -Dexec.args="$(word 3, $(MAKECMDGOALS))"
 
 all:
 	clean compile
+
+%:
+	@:
